# wut-unix-shell

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  README.md  STYLE.md  build.sh  debug.sh  lex.yy.c  lorem.txt  merol.txt  parser.tab.c  parser.tab.h  run.sh  test.sh  uxp.code-workspace
src/: CMakeLists.txt  main.c  main.cpp
src/interpreter/: CMakeLists.txt  cli.c  cli.h  interpreter.c  interpreter.h
src/lexer/: .gitignore  CMakeLists.txt  backup.lex  lex.yy.c  lexems.h  lexer.c  lexer.h  main.lex  parser.tab.c
src/lexer/flex/: Makefile  config.status  libtool
src/lexer/flex/doc/: Makefile
src/lexer/flex/examples/: Makefile
src/lexer/flex/examples/fastwc/: Makefile
src/lexer/flex/examples/manual/: Makefile
src/lexer/flex/po/: Makefile  Makefile.in
src/lexer/flex/src/: Makefile  flex  stage1flex
src/lexer/flex/src/.libs/: libfl.so.2.0.0
src/lexer/flex/tests/: Makefile
src/lexer/flex/tools/: Makefile
src/lib/: CMakeLists.txt  logger.c  logger.h  mmem.c  mmem.h  strpls.c  strpls.h
src/lib/log.c/: README.md
src/lib/log.c/src/: CMakeLists.txt  log.c  log.h
src/log.c/: README.md
src/log.c/src/: CMakeLists.txt
src/parser/: .gitignore  CMakeLists.txt  interface.c  interface.h  lex.yy.c  lexer.c  lexer.h  lexer.l  parser.c  parser.h  parser.output  parser.tab.c  parser.y  scanner.lex  structures.c  structures.h  tree.c  tree.h
src/pipes/: CMakeLists.txt  pipes.c  pipes.h
test/: CMakeLists.txt  dummy.cpp  example.c  interpreter.c  main.c  parser.c  strpls.c
